--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -3,11 +3,46 @@
         //width: 100%;
         height: 95px;
         background: $bgOne;
-        padding: 2.8% 6.9% 1.6% 5.9%;
+        //padding: 2.8% 6.9% 1.6% 5.9%;
         //border: $borde;
     
-        display: flex;
-        justify-content: space-between;
+        nav {
+            display: flex;
+            flex-direction: column;
+
+            .logo {
+                width: 100%;
+                padding: 1em;
+
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+            }
+
+            .menu {
+                width: 100%;
+                display: none;
+
+                /* display: flex;
+                flex-direction: column; */
+
+                ul {
+                    width: 100%;
+                    text-decoration: none;
+
+                    li {
+                        width: 100%;
+                        list-style: none;
+                        text-align: center;
+                        background: $colorPrimary;
+
+                        a {
+                            @extend %a;
+                        }
+                    }
+                }
+            }
+        }
 
         /* &.dark {
             background: $bgDark;
