Primer intento de JavaScript

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -13,8 +13,8 @@
 #container {
     min-width: 375px;
     width: 100%;
-    border-top: 5px solid $colorPrimary;
     border-bottom: 5px solid $colorPrimary;
+    padding-top: 95px;
     //border-left: $borde;
     //border-right: $borde;
     //border: $borde;
