--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,30 +1,36 @@
 #container {
     header {
-        //width: 100%;
+        width: 100%;
         height: 95px;
+        position: fixed;
+        top: 0;
         background: $bgOne;
+        border-top: 5px solid $colorPrimary;
         //padding: 2.8% 6.9% 1.6% 5.9%;
         //border: $borde;
     
         nav {
             display: flex;
             flex-direction: column;
+            justify-content: space-between;
+            //border: $borde;
 
             .logo {
                 width: 100%;
-                padding: 1em;
+                padding: 10px;
 
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
+                align-items: center;
             }
 
             .menu {
                 width: 100%;
-                display: none;
+                //display: none;
 
-                /* display: flex;
-                flex-direction: column; */
+                display: flex;
+                flex-direction: column;
 
                 ul {
                     width: 100%;
@@ -35,6 +41,7 @@
                         list-style: none;
                         text-align: center;
                         background: $colorPrimary;
+                        opacity: 90%;
 
                         a {
                             @extend %a;
