--- a/styles/_mediaqueries.scss
+++ b/styles/_mediaqueries.scss
@@ -1,11 +1,63 @@
-@media screen and (max-width: 700px) {
+@media screen and (min-width: 720px) {
     #container {
-        width: 100%;
+        header {
+            height: 93px;
+            //top: 0;
+            background: yellow;
+            //position: fixed;
+            border: $borde;
+
+            nav {
+                //margin: auto;
+                height: 100%;
+
+                flex-direction: row;
+                //justify-content: space-between;
+                align-items: center;
+
+                .logo {
+                    padding: 0;
+
+                    .boton {
+                        display: none;
+                    }
+                }
+
+                .menu {
+                    display: flex;
+
+                    ul {
+                        width: 100%;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-between;
+                        align-items: center;
+
+                        li {
+                            width: unset;
+                            background: unset;
+                            text-align: unset;
+
+                            a {
+                                color: $colorPrimary;
+                                font-size: 14px;
+                                line-height: 17px;
+                                letter-spacing: 0;
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
 }
 
-@media screen and (max-width: 1440px) {
+@media screen and (min-width: 900px) {
     #container {
-        width: 100%;
+        max-width: 1440px;
+
+        header {
+            background: black;
+        }
     }
 }
