--- a/styles/style.css
+++ b/styles/style.css
@@ -54,8 +54,12 @@
 }
 
 #container header {
+  width: 100%;
   height: 95px;
+  position: fixed;
+  top: 0;
   background: #FFF;
+  border-top: 5px solid #572EE5;
   /* &.dark {
             background: $bgDark;
         } */
@@ -69,11 +73,14 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 #container header nav .logo {
   width: 100%;
-  padding: 1em;
+  padding: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -84,13 +91,20 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #container header nav .menu {
   width: 100%;
-  display: none;
-  /* display: flex;
-                flex-direction: column; */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 #container header nav .menu ul {
@@ -103,6 +117,7 @@
   list-style: none;
   text-align: center;
   background: #572EE5;
+  opacity: 90%;
 }
 
 #container main {
@@ -218,22 +233,75 @@
   padding: 47.8px 0 23px;
 }
 
-@media screen and (max-width: 700px) {
-  #container {
+@media screen and (min-width: 720px) {
+  #container header {
+    height: 93px;
+    background: yellow;
+    border: 1px solid;
+  }
+  #container header nav {
+    height: 100%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  #container header nav .logo {
+    padding: 0;
+  }
+  #container header nav .logo .boton {
+    display: none;
+  }
+  #container header nav .menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  #container header nav .menu ul {
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  #container header nav .menu ul li {
+    width: unset;
+    background: unset;
+    text-align: unset;
+  }
+  #container header nav .menu ul li a {
+    color: #572EE5;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0;
   }
 }
 
-@media screen and (max-width: 1440px) {
+@media screen and (min-width: 900px) {
   #container {
-    width: 100%;
+    max-width: 1440px;
+  }
+  #container header {
+    background: black;
   }
 }
 
 #container {
   min-width: 375px;
   width: 100%;
-  border-top: 5px solid #572EE5;
   border-bottom: 5px solid #572EE5;
+  padding-top: 95px;
 }
 /*# sourceMappingURL=style.css.map */
