Primeras configuraciones RWD

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -2,7 +2,7 @@
     footer {
         background: $bgOne;
         text-align: center;
-        //border: $borde;
+        border: $borde;
 
         #p1 {
             @extend %p1;
