--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -7,17 +7,17 @@
         background: $bgOne;
         border-top: 5px solid $colorPrimary;
         //padding: 2.8% 6.9% 1.6% 5.9%;
-        //border: $borde;
+        border: $borde;
     
         nav {
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            
             //border: $borde;
 
             .logo {
                 width: 100%;
-                padding: 10px;
+                padding: 1em;
 
                 display: flex;
                 flex-direction: row;
@@ -27,10 +27,10 @@
 
             .menu {
                 width: 100%;
-                //display: none;
+                display: none;
 
-                display: flex;
-                flex-direction: column;
+                /* display: flex;
+                flex-direction: column; */
 
                 ul {
                     width: 100%;
