--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -11,7 +15,7 @@
 @import "mediaqueries";
 
 #container {
-    min-width: 375px;
+    //min-width: 375px;
     width: 100%;
     border-bottom: 5px solid $colorPrimary;
     padding-top: 95px;
