--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -7,7 +7,7 @@
         background: $bgOne;
         border-top: 5px solid $colorPrimary;
         //padding: 2.8% 6.9% 1.6% 5.9%;
-        border: $borde;
+        //border: $borde;
     
         nav {
             display: flex;
@@ -27,10 +27,12 @@
 
             .menu {
                 width: 100%;
-                display: none;
-
-                /* display: flex;
-                flex-direction: column; */
+                height: 500px;
+                @extend %menu;
+                
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
 
                 ul {
                     width: 100%;
@@ -38,21 +40,47 @@
 
                     li {
                         width: 100%;
+                        //height: 100%;
                         list-style: none;
                         text-align: center;
-                        background: $colorPrimary;
-                        opacity: 90%;
+                        background: rgba($colorPrimary, 0.9);
+
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+
+                        &:last-child {
+                            padding-bottom: 800px;
+                        }
 
                         a {
                             @extend %a;
                         }
+
+                        span {
+                            width: 41px;
+                            border: 1px solid $bgOne;
+                            opacity: 0.5;
+                        }
                     }
+                }
+
+                .dark {
+                    li {
+                        background: $colorBlack;
+                    
+                    }
+                }
+
+                .on {
+                    display: none;
                 }
             }
         }
 
-        /* &.dark {
+        &.dark {
             background: $bgDark;
-        } */
+            border-top: 5px solid $colorBlack;
+        }
     }
 }
