--- a/styles/style.css
+++ b/styles/style.css
@@ -8,16 +8,31 @@
           box-sizing: border-box;
 }
 
+#container header nav .menu {
+  color: #FFF;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 60px;
+}
+
 #container main #inspirate h1 {
-  color: #572EE5;
+  color: #572ee5;
   font-family: 'Montserrat', sans-serif;
   font-size: 30px;
   line-height: 36px;
   text-align: center;
 }
 
+#container main #inspirate .search input {
+  border: none;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 19px;
+}
+
 #container main #trending h2 {
-  color: #572EE5;
+  color: #572ee5;
   font-family: 'Montserrat', sans-serif;
   font-size: 25px;
   line-height: 30px;
@@ -25,7 +40,7 @@
 }
 
 #container main #inspirate h3 {
-  color: #572EE5;
+  color: #572ee5;
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   line-height: 25px;
@@ -33,7 +48,7 @@
 }
 
 #container main #inspirate p {
-  color: #572EE5;
+  color: #572ee5;
   font-family: 'Montserrat-medium', sans-serif;
   font-size: 14px;
   font-weight: lighter;
@@ -75,11 +90,7 @@
   position: fixed;
   top: 0;
   background: #FFF;
-  border-top: 5px solid #572EE5;
-  border: 1px solid;
-  /* &.dark {
-            background: $bgDark;
-        } */
+  border-top: 5px solid #572ee5;
 }
 
 #container header nav {
@@ -112,9 +123,17 @@
 
 #container header nav .menu {
   width: 100%;
-  display: none;
-  /* display: flex;
-                flex-direction: column; */
+  height: 500px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 #container header nav .menu ul {
@@ -126,17 +145,7 @@
   width: 100%;
   list-style: none;
   text-align: center;
-  background: #572EE5;
-  opacity: 90%;
-}
-
-#container main {
-  text-align: center;
-}
-
-#container main #inspirate {
-  background: #FFF;
-  border: 1px solid;
+  background: rgba(87, 46, 229, 0.9);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -147,26 +156,47 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  /* .over {
-                //width: 100%;
-                position: absolute;
-                border: $borde;
-                margin-left: 20px; */
-  /* img {
-                    z-index: 2;
-                }
-            } */
-  /* &.dark {
-                background: $bgDark;
+}
 
-                h1 {
-                    color: $bgOne;
-                }
+#container header nav .menu ul li:last-child {
+  padding-bottom: 800px;
+}
 
-                h3 {
-                    color: $bgOne;
-                }
-            } */
+#container header nav .menu ul li span {
+  width: 41px;
+  border: 1px solid #FFF;
+  opacity: 0.5;
+}
+
+#container header nav .menu.dark li {
+  background: #000;
+}
+
+#container header nav .menu.on {
+  display: none;
+}
+
+#container header.dark {
+  background: #37383C;
+  border-top: 5px solid #000;
+}
+
+#container main {
+  text-align: center;
+}
+
+#container main #inspirate {
+  background: #FFF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #container main #inspirate h1 {
@@ -177,19 +207,35 @@
   color: #50E3C2;
 }
 
-#container main #inspirate img {
+#container main #inspirate .ilustra {
   width: 72.8%;
   height: 10.8%;
   margin-top: 31px;
 }
 
-#container main #inspirate input {
+#container main #inspirate .search {
   width: 89.1%;
   height: 50px;
-  font-family: 'Roboto', sans-serif;
-  border: 1px solid #572EE5;
   border-radius: 27px;
-  text-align: left;
+  border: 1px solid #572ee5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#container main #inspirate .search a {
+  width: 20px;
+  height: 20px;
+}
+
+#container main #inspirate .search a .LogoSearch {
+  width: 5.3%;
+  height: 1.7%;
 }
 
 #container main #inspirate h3 {
@@ -200,20 +246,25 @@
   margin: 2px 24% 45px;
 }
 
+#container main #inspirate.dark {
+  background: #37383C;
+}
+
+#container main #inspirate.dark h1 {
+  color: #FFF;
+}
+
+#container main #inspirate.dark .search {
+  border-color: #FFF;
+}
+
+#container main #inspirate.dark h3 {
+  color: #FFF;
+}
+
 #container main #trending {
   background: #F3F5F8;
   border: 1px solid;
-  /* &.dark {
-                background: $bgDarkTwo;
-
-                h2 {
-                    color: $bgOne;
-                }
-
-                h4 {
-                    color: $bgOne;
-                }
-            } */
 }
 
 #container main #trending h2 {
@@ -224,27 +275,31 @@
   margin-top: 9px;
 }
 
-#container main #trending img {
-  width: 64.8%;
-  height: 15.6%;
-  margin: 32px 22px 82px 22px;
+#container main #trending .content {
+  background: red;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+}
+
+#container main #trending.dark {
+  background: #222326;
+}
+
+#container main #trending.dark h2 {
+  color: #FFF;
+}
+
+#container main #trending.dark h4 {
+  color: #FFF;
 }
 
 #container footer {
   background: #FFF;
   text-align: center;
   border: 1px solid;
-  /* &.dark {
-            background: $bgDark;
-
-            #p1 {
-                color: $bgOne;
-            }
-
-            #p2 {
-                color: $bgOne;
-            }
-        } */
+  border-bottom: 5px solid #572ee5;
 }
 
 #container footer #p1 {
@@ -258,6 +313,19 @@
 
 #container footer #p2 {
   padding: 47.8px 0 23px;
+}
+
+#container footer.dark {
+  background: #37383C;
+  border-bottom: 5px solid #000;
+}
+
+#container footer.dark #p1 {
+  color: #FFF;
+}
+
+#container footer.dark #p2 {
+  color: #FFF;
 }
 
 @media screen and (min-width: 414px) {
@@ -310,16 +378,11 @@
     padding-left: 1em;
   }
   #container header nav .menu ul li a {
-    color: #572EE5;
+    color: #572ee5;
     font-size: 14px;
     line-height: 17px;
     letter-spacing: 0;
     text-transform: uppercase;
-  }
-  #container main #inspirate {
-    /* h1 {
-
-                } */
   }
   #container main #inspirate img {
     width: 32.7%;
@@ -414,7 +477,6 @@
 
 #container {
   width: 100%;
-  border-bottom: 5px solid #572EE5;
   padding-top: 95px;
 }
 /*# sourceMappingURL=style.css.map */
